# worker-plusplus

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/worker++/: job.hpp  team.hpp  worker.hpp
test/: CMakeLists.txt  job.cc  job.cpp  team.cpp  worker.cc  worker.cpp
